--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .hamburger div:first-child {
+    @apply translate-y-1.5 rotate-45;
+  }
+  .hamburger div:last-child {
+    @apply -translate-y-1 -rotate-45;
+  }
+}
